JS Smoothscroll fix for Tabs & CSS fix for Tables on Mobile.

--- a/_sass/bootstrap.scss
+++ b/_sass/bootstrap.scss
@@ -1462,11 +1462,6 @@ hr {
   color: #333
 }
 
-.h1, .h2, .h3, h1, h2, h3 {
-  margin-top: 25px !important;
-  margin-bottom: 25px !important;;
-}
-
 .h1 .small, .h1 small, .h2 .small, .h2 small, .h3 .small, .h3 small, h1 .small, h1 small, h2 .small, h2 small, h3 .small, h3 small {
   font-size: 65%
 }
